--- a/Frontend/src/app/finalize-procurement-request-create/finalize-procurement-request-create.component.html
+++ b/Frontend/src/app/finalize-procurement-request-create/finalize-procurement-request-create.component.html
@@ -5,9 +5,10 @@
 
       <mat-card-header>
         <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">
-          Finalize
-          Procurement Request
-        </mat-card-title>
+          Finalize Procurement Request </mat-card-title>
+          <span style="flex: 1; text-align: right;"><mat-icon (click)="openFinalizeProcReqTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+          style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+          </span>
         <mat-card-subtitle>
           <table style="width:100%;" cellspacing="0">
             <tr>
