--- a/Frontend/src/app/finalize-procurement-request/finalize-procurement-request.component.html
+++ b/Frontend/src/app/finalize-procurement-request/finalize-procurement-request.component.html
@@ -71,7 +71,7 @@
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Status
                     </th>
                     <td mat-cell *matCellDef="let procurement">
-                        <span [style.color]="getStatusColor(procurement.procurement_Payment_Status.name)">
+                        <span [style.color]="getStatusColor(procurement.procurement_Payment_Status.name)" matTooltip="Status of Finalized Procurement Request">
                             {{procurement.procurement_Payment_Status.name}}
                         </span>
                     </td>
@@ -82,6 +82,7 @@
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
 
                         <button class="noselect" type="button" style="background-color: #94CC5B;"
+                            matTooltip="This will direct you to the Finalize Procurement Request Page, there you will be able to fianlize the procurement request."
                             routerLink="/FinalizeProcurementRequestCreate/{{procurement.procurement_Details_ID}}">
                             <span class='text'>View</span>
                             <span class="icon" style="border-left: 1px solid #94CC5B; ">
