--- a/Frontend/src/app/onboard_request/request-create/request-create.component.html
+++ b/Frontend/src/app/onboard_request/request-create/request-create.component.html
@@ -3,6 +3,8 @@
   <div style="display: inline-block; text-align: left;position: relative;width: 700px;">
     <h1 style="margin: 1%;  color: #244688; font-weight:700; font-size:32pt;">
       Create Vendor Onboard Request
+      <mat-icon (click)="openCreateOnboardRequestTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+      style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
     </h1>
     <div>  
     <label style="margin-left: 1%; margin-top:1%;color: #244688;font-size:16pt;">Please select one of the two options:</label>
