--- a/Frontend/src/app/Settings/backupDialog/restore.component.html
+++ b/Frontend/src/app/Settings/backupDialog/restore.component.html
@@ -1,6 +1,8 @@
-<h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center;"
+<h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: space-between;"
     *ngIf="showConfirmationDialog == true">
   BACKUP SYSTEM DATA
+  <mat-icon (click)="openBackupTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+  style="font-size:30pt; height: 37px; width: 37px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
 </h1>
 <div mat-dialog-content *ngIf="showConfirmationDialog == true">
   <p>You are about to create a Backup of the systems current data!</p>
