--- a/Frontend/src/app/Settings/restore-dialog/restore-dialog.component.html
+++ b/Frontend/src/app/Settings/restore-dialog/restore-dialog.component.html
@@ -1,5 +1,7 @@
-<h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center;">
+<h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: space-between;">
     RESTORE SYSTEM DATA
+    <mat-icon (click)="openRestoreTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+    style="font-size:30pt; height: 37px; width: 37px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
   </h1>
   <div mat-dialog-content style="display: flex; flex-direction: column; align-items: center;">
     <p>Select the backup file you want to use for restoring the system.</p>
