--- a/Frontend/src/app/create-employee-role/create-employee-role.component.html
+++ b/Frontend/src/app/create-employee-role/create-employee-role.component.html
@@ -5,6 +5,8 @@
       <mat-card-header>
         <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%;">Create Employee
           Roles</mat-card-title>
+          <mat-icon (click)="openCreateRoleTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+          style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
         <mat-card-subtitle style="justify-content: center; align-items: center;">
 
           <mat-card-content style="margin-left:10%;">
