--- a/Frontend/src/app/onboard_request/request-delete/request-delete.component.html
+++ b/Frontend/src/app/onboard_request/request-delete/request-delete.component.html
@@ -1,6 +1,9 @@
 
-<h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center;"
-    *ngIf="showConfirmationDialog == true">DELETE ONBOARD REQUEST</h1>
+<h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: space-between;"
+    *ngIf="showConfirmationDialog == true">DELETE ONBOARD REQUEST
+    <mat-icon (click)="openDeleteOnboardRequestTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+        style="font-size:30pt; height: 37px; width: 37px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
+</h1>
 <div mat-dialog-content *ngIf="showConfirmationDialog == true">
     <p>You are about to delete the request no: <strong>{{data.ID}}</strong></p>
     <p>Containing The following company's:</p>
