--- a/Frontend/src/app/place-procurement-request/place-procurement-request.component.html
+++ b/Frontend/src/app/place-procurement-request/place-procurement-request.component.html
@@ -22,6 +22,8 @@
     <mat-sidenav-content class="Main-content">
         <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
             Place Procurement Request
+            <mat-icon (click)="openPPRIFrameTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+            style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
         </h1>
 
         <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
@@ -73,7 +75,7 @@
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
 
-                        <button class="noselect" type="button" style="background-color: #94CC5B;"
+                        <button class="noselect" type="button" style="background-color: #94CC5B;" matTooltip="This will naviagte you to the Place Procurement Details Page, which will allow you to ProfessionalIndemnityInsurancerocurement Details Request."
                             routerLink="/PlaceProcurementRequestCreateDetails/{{procurement.procurement_Request_ID}}">
                             <span class='text'>Create</span>
                             <span class="icon" style="border-left: 1px solid #94CC5B; ">
