--- a/Frontend/src/app/view-flagged-procurement-request/view-flagged-procurement-request.component.html
+++ b/Frontend/src/app/view-flagged-procurement-request/view-flagged-procurement-request.component.html
@@ -21,6 +21,8 @@
     <mat-sidenav-content class="Main-content">
         <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
             View Flagged Placed Procurement Request
+            <mat-icon (click)="openFPRIFrameTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+            style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
         </h1>
 
         <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
@@ -79,6 +81,7 @@
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
 
                         <button class="noselect" type="button" style="background-color: #94CC5B;"
+                            matTooltip="This will direct you to the Accept Procurement Details Request Page, there you will be able to Accept or reject that procurement details request."
                             routerLink="/ViewFlaggedProcurementDetails/{{procurement.procurement_Details_ID}}">
                             <span class='text'>View</span>
                             <span class="icon" style="border-left: 1px solid #94CC5B; ">
