--- a/Frontend/src/app/view-procurement-request/view-procurement-request.component.html
+++ b/Frontend/src/app/view-procurement-request/view-procurement-request.component.html
@@ -22,6 +22,8 @@
     <mat-sidenav-content class="Main-content">
         <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
             View Procurement Request
+            <mat-icon (click)="openPRIFrameTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+            style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
         </h1>
 
         <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
@@ -49,7 +51,7 @@
                 <span class="loader" id="loading"></span>
             </div>
 
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" id="table" multiTemplateDataRows>
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" id="table" multiTemplateDataRows matTooltip="Click table row for more information regarding procurement request">
 
                 <ng-container matColumnDef="Name">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Name </th>
@@ -76,7 +78,7 @@
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Status
                     </th>
                     <td mat-cell *matCellDef="let Consumable">
-                        <span [style.color]="getStatusColor(Consumable.requisition_Status.name)">
+                        <span matTooltip="Status of this Procurement request" [style.color]="getStatusColor(Consumable.requisition_Status.name)">
                             {{Consumable.requisition_Status.name}}
                         </span>
                     </td>
@@ -163,7 +165,7 @@
                                                 </td>
                                                 <td
                                                     *ngIf="item.procurement_Request_ID == element.procurement_Request_ID">
-                                                    <a target="_blank" style="color: rgb(65, 143, 227);"
+                                                    <a target="_blank" style="color: rgb(65, 143, 227);" matTooltip="Click link to open this file in a new tab"
                                                         (click)="openPDFInNewTab(i)">{{FileDetails[i].FileName}}</a>
                                                 </td>
                                                 <td
