--- a/Frontend/src/app/view-procurement-details/view-procurement-details.component.html
+++ b/Frontend/src/app/view-procurement-details/view-procurement-details.component.html
@@ -24,7 +24,8 @@
         <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
             View Procurement Request Details
             <mat-icon (click)="openPRDIFrameTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-            style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+                style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}"
+                matTooltip="Need help? Click me!"></mat-icon>
         </h1>
 
         <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
@@ -71,7 +72,8 @@
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Status
                     </th>
                     <td mat-cell *matCellDef="let procurement">
-                        <span [style.color]="getStatusColor(procurement.procurement_Status.name)" matTooltip="Status of this procurment Request details.">
+                        <span [style.color]="getStatusColor(procurement.procurement_Status.name)"
+                            matTooltip="Status of this procurment Request details.">
                             {{procurement.procurement_Status.name}}
                         </span>
                     </td>
@@ -81,7 +83,8 @@
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Upload Proof of Payment
                     </th>
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
-                        <button mat-raised-button matTooltip="This will direct you to the Upload Proof of Payment Page, there you will be able to upload the receipt file and/or upload teh credit card payment file."
+                        <button mat-raised-button
+                            matTooltip="This will direct you to the Upload Proof of Payment Page, there you will be able to upload the receipt file and/or upload teh credit card payment file."
                             (click)="openDialog(procurement.buyer_Name, procurement.procurement_Details_ID)"
                             type="button"
                             style="margin-right: 5%; display: flex; align-items: center; font-weight:bold ; width: 180px; margin-top: 0.5%; background-color: rgba(148, 204, 91, 0.5);"
@@ -104,7 +107,8 @@
                         Invoice
                     </th>
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
-                        <button mat-raised-button matTooltip="This will direct you to the Upload Invoice Page, there you will be able to upload the Invoice file."
+                        <button mat-raised-button
+                            matTooltip="This will direct you to the Upload Invoice Page, there you will be able to upload the Invoice file."
                             (click)="openInvDialog(procurement.buyer_Name, procurement.procurement_Details_ID)"
                             type="button"
                             style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 133px; margin-top: 0.5%; background-color: #94CC5B;">
@@ -118,15 +122,14 @@
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
 
-                        <button *ngIf="procurement.itemReceived == true; else NoIssue" class="disabled" type="button" 
-                            style="background-color: rgba(148, 204, 91, 0.5);"
-                            routerLink="/ReceiveProcurementItem/{{procurement.procurement_Details_ID}}" disabled>
+                        <button *ngIf="procurement.itemReceived == true; else NoIssue" class="disabled" type="button"
+                            style="background-color: rgba(148, 204, 91, 0.5);" disabled>
                             <span class='text' style="color: gray;">Receive</span>
                         </button>
                         <ng-template #NoIssue>
                             <button class="noselect" type="button" style="background-color: #94CC5B;"
                                 matTooltip="This will direct you to the Receive Consumable Page, there you will be able to set the amount of consumables received."
-                                routerLink="/ReceiveProcurementItem/{{procurement.procurement_Details_ID}}">
+                                (click)="Receive(procurement.item_Type, procurement.procurement_Details_ID)">
                                 <span class='text'>Receive</span>
                                 <span class="icon" style="border-left: 1px solid #94CC5B;">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
