--- a/Frontend/src/app/delete-employee/delete-employee.component.html
+++ b/Frontend/src/app/delete-employee/delete-employee.component.html
@@ -1,14 +1,11 @@
-<div style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: center; align-items: center;">
-  <h1 mat-dialog-title style="color: white;"
-      *ngIf="showConfirmationDialog == true">
-    DELETE EMPLOYEE
 
-
-  </h1>
+<h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: space-between;"
+  *ngIf="showConfirmationDialog == true">
+  DELETE EMPLOYEE
   <mat-icon (click)="openDeleteEmployeeTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-            style="font-size:24pt; height: 37px; width: 37px; margin-bottom: 5px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
-</div>
+        style="font-size:30pt; height: 37px; width: 37px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
 
+</h1>
 
 <div mat-dialog-content *ngIf="showConfirmationDialog == true">
   <p>You are about to delete the employee: <strong>{{Employee.employeeName}}</strong> and user:
